--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
         <title>Personal Bio</title>
         <link rel="stylesheet" href="styles.css">
     </head>
+    <script defer src="script.js"></script>
+    <button id="dark-theme">Change Theme Color</button>
     <body>
+        <div id="bio">
         <h1>Evan Marchesani</h1>
+        <h2>About Me</h2>
+        </div>
+        <div id="hobbies">
         <p>Hobbies & Intrests</p>
         <ul>
             <li>Video Games</li>
@@ -14,11 +20,13 @@
             <li>Anime and Manga</li>
         </ul>
         
+        <div id="pics">
         <img src="onepiece.jpg" alt="One piece poster" 
             width="233px" height="350px">
         <img src="Rocket League.jpg" alt="Rocket League Logo"
             width="400px" height="300">
         <img src="computer.jpg" alt="Computer"
             width="500px" height="300">
+        </div>
     </body>
 </html>
