--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <title>Personal Bio</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://rsms.me/">
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     </head>
     <script defer src="script.js"></script>
     <button id="dark-theme">Change Theme Color</button>
     <body>
+
         <div id="bio">
         <h1>Evan Marchesani</h1>
         <h2>About Me</h2>
@@ -14,19 +17,42 @@
         <div id="hobbies">
         <p>Hobbies & Intrests</p>
         <ul>
-            <li>Video Games</li>
-            <li>Computers</li>
-            <li>Talking to friends</li>
-            <li>Anime and Manga</li>
+            <li>
+                <div class="card">
+                <img src="onepiece.jpg" alt="One Piece Poster" style="width:100%">
+                <div class="container">
+                  <h4><b>Anime</b></h4>
+                  <p2>One Piece</p2>
+                </div>
+              </div> 
+            </li>
+            <li>
+                <div class="card">
+                <img src="computer.jpg" alt="Computer" style="width:100%">
+                <div class="container">
+                  <h4><b>Computers</b></h4>
+                  <p2>Desktop</p2>
+                </div>
+              </div> 
+            </li>
+            <li>
+                <div class="card">
+                    <img src="Rocket League.jpg" alt="Computer" style="width:100%">
+                    <div class="container">
+                      <h4><b>Video Games</b></h4>
+                      <p2>Rocket League</p2>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img src="berserk.jpg" alt="Computer" style="width:100%">
+                        <div class="container">
+                          <h4><b>Manga</b></h4>
+                          <p2>Berserk</p2>
+                        </div>
+                      </div>
+                    </li>
         </ul>
-        
-        <div id="pics">
-        <img src="onepiece.jpg" alt="One piece poster" 
-            width="233px" height="350px">
-        <img src="Rocket League.jpg" alt="Rocket League Logo"
-            width="400px" height="300">
-        <img src="computer.jpg" alt="Computer"
-            width="500px" height="300">
-        </div>
     </body>
 </html>
