--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script defer src="script.js"></script>
     <button id="dark-theme">Change Theme Color</button>
     <body>
+      <nav>
+        <ul>
+          <li><a href="#bio">About Me</a></li>
+          <li><a href="#hobbies">Hobbies</a></li>
+        </ul>
+
+      </nav>
 
         <div id="bio">
         <h1>Evan Marchesani</h1>
