--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
     <button id="dark-theme">Change Theme Color</button>
     <body>
       <nav>
-        <ul>
+        <ul>     
           <li><a href="#bio">About Me</a></li>
           <li><a href="#hobbies">Hobbies</a></li>
         </ul>
-
       </nav>
+
+      <div class="profile-card">
+        <img src="profile.jpeg" alt="Profile Picture" class="profile-pic">
+        <h3>Evan Marchesani</h3>
+        <p>UX Designer</p>
+        <p>Interests: Gaming, Computers, Anime/Manga</p>
+      </div>
 
         <div id="bio">
         <h1>Evan Marchesani</h1>
